Always check ROCM_NO_WRAPPER_HEADER_WARNING
The ROCM_@ITEM_GUARD@_GAVE_WARNING define did not function as intended.
It was introduced to suppress warnings for internal headers that users
did not directly include. However, because it used a unique define for
each item, internal headers actually did emit warnings, as they were
different items with different unique defines. The
ROCM_@ITEM_GUARD@_GAVE_WARNING would only prevent warnings when the
same file is included twice, but that case is already prevented by
the wrapper header include guards.

If we instead use one macro identifier for all headers, we get two
benefits. First, this fixes the problem of excessive warnings. A
user including rocblas.h via the wrapper is no longer warned about
`internal/rocblas-auxiliary.h`, `internal/rocblas-export.h`,
`internal/rocblas-functions.h`, `internal/rocblas-types.h`, and
`internal/rocblas-version.h`. They're only warned about the single
header they included. Second, this makes it very easy to suppress the
warning if desired. A user that wants to disable this warning globally,
can just add -DROCM_NO_WRAPPER_HEADER_WARNING to their CXXFLAGS.

--- a/share/rocm/cmake/header_template.h.in
+++ b/share/rocm/cmake/header_template.h.in
@@ -5,21 +5,22 @@
 #ifndef @include_guard@
 #define @include_guard@
 
-#ifndef ROCM_@ITEM_GUARD@_GAVE_WARNING
-#define ROCM_@ITEM_GUARD@_GAVE_WARNING
+#if defined(ROCM_NO_WRAPPER_HEADER_WARNING)
+#include "@file_rel_path@"
+#else /* !defined(ROCM_NO_WRAPPER_HEADER_WARNING) */
 
+/* warn that this header is deprecated */
 #if defined(_MSC_VER)
 #pragma message(": warning:This file is deprecated. Use the header file from @header_location@ by using #include <@correct_include@>")
 #elif defined(__GNUC__)
 #warning "This file is deprecated. Use the header file from @header_location@ by using #include <@correct_include@>"
 #endif
+
+/* include the header from the new path; don't warn about its includes */
+#define ROCM_NO_WRAPPER_HEADER_WARNING
 #include "@file_rel_path@"
+#undef ROCM_NO_WRAPPER_HEADER_WARNING
 
-#undef ROCM_@ITEM_GUARD@_GAVE_WARNING
-#else
+#endif /* ROCM_NO_WRAPPER_HEADER_WARNING */
 
-#include "@file_rel_path@"
-
-#endif // ROCM_@ITEM_GUARD@_GAVE_WARNING
-
-#endif // @include_guard@
+#endif /* @include_guard@ */
